--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -96,6 +96,8 @@ SonicZap:
 		Blockable: true
 		TrackTarget: true
 		Color: 50F5FF45
+		StartScale: 0.7
+		EndScale: 1.2
 	Warhead@1Dam: SpreadDamage
 		Range: 0, 32
 		Falloff: 100, 100
