--- a/mods/ts/rules/civilian-vehicles.yaml
+++ b/mods/ts/rules/civilian-vehicles.yaml
@@ -76,7 +76,14 @@
 	# WithModelBarrel:
 	WithMuzzleOverlay:
 
-	
+	LongJumpSkill:
+		ChargeDelay: 50
+		TargetCursor: attack
+		TakeOffWeapon: JumpTakeOffExplode
+		LandWeapon: JumpLandExplode
+		Speed: 150
+		JumpAngle: 128
+		Voice: Attack
 
 ^TRUCK:
 	Inherits: ^CivilianVoxelVehicle
