修复carryall的一些bug

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -429,6 +429,7 @@ TRNSPORT:
 		CanDeployOnRamps: true
 		SkipMakeAnimation: true
 		Voice: Move
+	-Hovers@CRUISING:
 	Health:
 		HP: 17500
 	Armor:
