--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -129,7 +129,7 @@ HVR:
 		RequiresCondition: !empdisable
 		BobDistance: -54
 		InitialHeight: 192
-	Carryable:
+	AttachCarryable:
 		CarriedCondition: carried
 	LeavesTrails:
 		RequiresCondition: !inside-tunnel && !carried
@@ -354,7 +354,7 @@ MMCH:
 		Armament: rpg
 	Selectable:
 		Bounds: 905, 2534, 0, -482
-	Carryable:
+	AttachCarryable:
 		LocalOffset: 0,0,577
 	### Help AI to manage
 	ProvidesPrerequisite@pluggablevulcan:
@@ -435,7 +435,7 @@ HMEC:
 		TickRate: 1
 	Selectable:
 		Bounds: 1206, 2413, 0, -482
-	Carryable:
+	AttachCarryable:
 		LocalOffset: 0,0,509
 	BodyOrientation:
 		QuantizedFacings: 1024
@@ -706,7 +706,7 @@ LIMPED:
 		Voice: Move
 		Weight: 2
 		# CargoCondition: ascargo
-	Carryable:
+	AttachCarryable:
 		RequiresCondition: undeployed
 	Voiced:
 		VoiceSet: Limpet
