--- a/mods/ts/rules/nod-structures.yaml
+++ b/mods/ts/rules/nod-structures.yaml
@@ -329,8 +329,12 @@ NARADR:
 		Range: 10c0
 	RenderDetectionCircle:
 	RevealsShroud:
+		Range: 6c0
+		RequiresCondition: disabled || empdisable
+	RevealsShroud@radar:
 		Range: 14c0
 		MaxHeightDelta: 3000
+		RequiresCondition: !disabled && !empdisable
 	WithIdleOverlay@DISH:
 		RequiresCondition: !build-incomplete
 		PauseOnCondition: disabled || empdisable
@@ -338,7 +342,7 @@ NARADR:
 	Targetable:
 		TargetTypes: Ground, Building, C4, SpyInfiltrate
 	Power:
-		Amount: -40
+		Amount: -80
 	ProvidesPrerequisite@buildingname:
 	IsometricSelectable:
 		Height: 72
