--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -58,7 +58,7 @@ GACTWR:
 		RequiresCondition: !build-incomplete
 		Type: wall
 	Valued:
-		Cost: 300
+		Cost: 200
 	Tooltip:
 		Name: Component Tower
 	Buildable:
@@ -70,6 +70,12 @@ GACTWR:
 		HP: 50000
 	Armor:
 		Type: Light
+	LineBuild:
+		Range: 8
+		NodeTypes: wall
+		SegmentType: gawall
+	LineBuildNode:
+		Types: wall, turret
 	BlocksProjectiles:
 		Height: 768
 		ValidRelationships: Neutral, Enemy
@@ -129,8 +135,6 @@ GACTWR:
 	WithMakeOverlay@MAKE-BRIGHT:
 		Sequence: make-bright
 		Palette: bright
-	LineBuildNode:
-		Types: turret
 	Power@vulcan:
 		RequiresCondition: !disabled && plug.vulcan
 		Amount: -30
@@ -185,7 +189,7 @@ GAVULC:
 GAROCK:
 	Inherits: ^BuildingPlug
 	Valued:
-		Cost: 300
+		Cost: 400
 	Tooltip:
 		Name: Weapon Plugin: RPG
 	Buildable:
@@ -199,7 +203,7 @@ GAROCK:
 GACSAM:
 	Inherits: ^BuildingPlug
 	Valued:
-		Cost: 400
+		Cost: 200
 	Tooltip:
 		Name: Weapon Plugin: Missile
 	Buildable:
