去掉砸地板

--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -241,7 +241,7 @@ IonCannon:
 		SmudgeType: LargeScorch
 		InvalidTargets: Building, Wall
 		Delay: 3
-		Dig: 418
+		# Dig: 418
 	Warhead@4Effect: CreateEffect
 		Explosions: ionbeam
 		ImpactSounds: ion1.aud
