修复equipment ui更新速度慢跟不上item移除速度导致的错误

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -58,6 +58,8 @@
 		WalkWeapon: WalkImpact
 
 		BellyBones: s-Adj_Belly
+		ChurnSounds: churna.wav, churnb.wav, churnc.wav, churnd.wav, churne.wav, churnf.wav
+		EmptySounds: groooooorwp.wav
 		
 	WithSkeleton:
 		Name: body
