Fix the carryall queue order to switch, again

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -423,8 +423,7 @@ TRNSPORT:
 		Palette: player
 		IsPlayerPalette: true
 	GrantConditionOnDeploy:
-		RequiresCondition: !AImicroManage
-		PauseOnCondition: carried
+		RequiresCondition: !AImicroManage && !carried
 		DeployedCondition: autocarry
 		CanDeployOnRamps: true
 		SkipMakeAnimation: true
